# pxsum

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yaml
release/completions/: pxsum.bash
release/man/: pxsum.1
skel/: loose-g.chk  loose.chk  strict-g.chk  strict.chk
skel/assets/: ace.jp2  ace.jxl  atom.avif  frolics.TIF
src/: args.rs  chk.rs  error.rs  img.rs  iter.rs  main.rs
